# a_bite_into

./: .gitignore  README.md
cnn_cpp/: CMakeLists.txt  README.md
cnn_cpp/samples/: CMakeLists.txt  DemoBinaryClassification.cc  DemoCheckGradient.cc  DemoCifar10.cc  DemoMnist.cc
cnn_cpp/src/: Model.cc  Model.h  Structure.h
cnn_cpp/src/Dataset/: Dataset.h  ImgTrans.h
cnn_cpp/src/Layers/: AllLayers.h  BatchNorm.h  Convolution.h  FullConnect.h  LayerBase.h  MaxPool.h  ReLU.h  SVM.h  Softmax.h
cnn_cpp/src/Optimizer/: AllOptimizers.h  OptimizerAdam.h  OptimizerBase.h  OptimizerSGD.h
transformer/: .gitignore  README.md  char_gen_dataloader.py  demo_char_echo_model.py  seq2seq_model.py  simple_loss.py  test_cross_entropy_stability.py  transformer_annotated.py  transformer_self.py
